Do not change props on disabled libinput devices

Otherwise it crashes the Xserver.

See https://bugs.freedesktop.org/show_bug.cgi?id=89296 and
http://lists.x.org/archives/xorg-devel/2015-February/045716.html

Signed-off-by: Olivier Fourdan <fourdan@xfce.org>